# unv-jenkins-to-ssh-config

./: LICENSE  README.org  default.nix  flake.nix  jenkins-to-ssh-config.cabal  jenkins-to-ssh-config.nix
exe/: jenkins-to-ssh-config.hs
src/: JTSC.hs
src/JTSC/: Config.hs
test/: JTSCSpec.hs
