cabal-version:       3.0

name:                jenkins-to-ssh-config
version:             0.1.0.0
synopsis:            Helpers to help porting stuff at Univention.
homepage:            https://github.com/thomasbach-dev/unv-jenkins-to-ssh-config
bug-reports:         https://github.com/thomasbach-dev/unv-jenkins-to-ssh-config/issues

license:             BSD-3-Clause
license-file:        LICENSE
author:              Thomas Bach
maintainer:          info@thomasbach.dev

category:            Development

common common-options
  build-depends:       aeson
                     , base
                     , bytestring
                     , connection
                     , exceptions
                     , filepath
                     , http-client
                     , http-client-tls
                     , optparse-applicative
                     , parsec
                     , pretty-show
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wcpp-undef
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages

library
  import:              common-options
  exposed-modules:     JTSC
                     , JTSC.Config
  hs-source-dirs:      src

executable jenkins-to-ssh-config
  import:              common-options
  build-depends:       jenkins-to-ssh-config
  main-is:             jenkins-to-ssh-config.hs
  hs-source-dirs:      exe


test-suite jenkins-to-ssh-config-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       jenkins-to-ssh-config
                     , hspec
  ghc-options:         -Wno-missing-home-modules
